--- a/lecture07.tex
+++ b/lecture07.tex
@@ -122,7 +122,7 @@ The relationship between these discriminants is summarized as follows.
   Exercise.
 \end{proof}
 
-\begin{proposition}
+\begin{proposition}\label{proposition:covolume_ideal_computation}
   Let $\afrak$ be a nonzero ideal of $\Ocal_{K}$, and let $L$ denote its image in $K_{\Rbb}$.
   Then $L$ is a complete lattice whose covolume is $\sqrt{|d_{K}|} \cdot [\Ocal_{K}:\afrak]$.
 \end{proposition}
