--- a/main.tex
+++ b/main.tex
@@ -24,5 +24,6 @@ Corrections of any typos or inaccuracies are always welcome, also using the pull
 \input{lecture05}
 \input{lecture06}
 \input{lecture07}
+\input{lecture08}
 
 \end{document}
