--- a/lecture06.tex
+++ b/lecture06.tex
@@ -70,7 +70,7 @@ We start with some preliminary lemmas.
   Since $\pfrak$ is maximal, we find $\pfrak \pfrak^{-1} = \Ocal$.
 
   The maximality of $\afrak$ shows that the ideal $\afrak \pfrak^{-1}$ admits a factorization as $\pfrak_{1} \cdots \pfrak_{k}$.
-  We know $\afrak \pfrak^{-1}$ is an ideal as $\afrak \subseteq \pfrak$, and so $\afrak \pfrak^{-1}\subseteq \pfrak \pfrak^{-1} \subseteq \Ocal.$
+  We know $\afrak \pfrak^{-1}$ is an ideal as $\afrak \subset \pfrak$, and so $\afrak \pfrak^{-1}\subset \pfrak \pfrak^{-1} \subset \Ocal.$
   Multiplying by $\pfrak$ gives
   \[ \afrak = \pfrak \pfrak_{1} \cdots \pfrak_{k}, \]
   which contradicts the assumption on $\afrak$.
