--- a/lecture06.tex
+++ b/lecture06.tex
@@ -27,7 +27,7 @@ We start with some preliminary lemmas.
   \[ \afrak^{-1} := \{x \in K \ | \ x \cdot \afrak \subset \Ocal\}. \]
   This is again a fractional ideal: it's clear that this is an $\Ocal$ module, so we must show it is finitely generated.
   Let $x \in \afrak^{-1}$, and fix some element $\frac pq$ in $\afrak$.
-  Observe that $x\frac pq=r$ for some $r\in \Ocal$,  hus $x=r\frac qp$, so $x \in \frac 1p \Ocal$, which implies $\afrak^{-1}\subseteq \frac 1q \Ocal$.
+  Observe that $x\frac pq=r$ for some $r\in \Ocal$, thus $x=r\frac qp$, so $x \in \frac 1p \Ocal$, which implies $\afrak^{-1}\subseteq \frac 1q \Ocal$.
   Thus $\afrak^{-1}$ is a submodule of a finitely generated module over a Noetherian domain, so is finitely generated.
   Also note that it is nonzero as it contains say, the product of the denominators of generators of $\afrak$. 
 \end{definition}
