--- a/main.tex
+++ b/main.tex
@@ -25,5 +25,6 @@ Corrections of any typos or inaccuracies are always welcome, also using the pull
 \input{lecture06}
 \input{lecture07}
 \input{lecture08}
+\input{lecture09}
 
 \end{document}
