add start of lecture 11

--- a/lecture08.tex
+++ b/lecture08.tex
@@ -10,7 +10,7 @@ As before, $\rho_{1},\ldots,\rho_{r}$ will be the real embeddings and $\sigma_{1
   Then the \emph{absolute norm} of $\afrak$, denoted $\Norm(\afrak)$, is the index (as abelian groups) $[\Ocal_{K}:\afrak]$.
 \end{definition}
 
-\begin{theorem}
+\begin{theorem}\label{theorem:exists_norm_mult}
   Let $\afrak$ be a nonzero ideal of $\Ocal_{K}$.
   For each complex embedding $\tau$, let $c_{\tau}$ be a positive real, and assume that $c_{\tau} = c_{\bar\tau}$ for all $\tau$.
   Assume also that
