--- a/main.tex
+++ b/main.tex
@@ -27,5 +27,6 @@ Corrections of any typos or inaccuracies are always welcome, also using the pull
 \input{lecture08}
 \input{lecture09}
 \input{lecture10}
+\input{lecture11}
 
 \end{document}
