--- a/preamble.tex
+++ b/preamble.tex
@@ -28,6 +28,8 @@
 \newcommand{\mfrak}[0]{\mathfrak{m}}
 \newcommand{\Mfrak}[0]{\mathfrak{M}}
 \newcommand{\Gal}[0]{\operatorname{Gal}}
+\newcommand{\dfrak}[0]{\mathfrak{d}}
+\newcommand{\Aut}[0]{\operatorname{Aut}}
 
 \newcommand{\todo}[2]{{\color{red}#1}\footnote{#2}}
 
