--- a/main.tex
+++ b/main.tex
@@ -28,5 +28,6 @@ Corrections of any typos or inaccuracies are always welcome, also using the pull
 \input{lecture09}
 \input{lecture10}
 \input{lecture11}
+\input{lecture12}
 
 \end{document}
