Add notes for Lecture 13

--- a/preamble.tex
+++ b/preamble.tex
@@ -30,6 +30,7 @@
 \newcommand{\Gal}[0]{\operatorname{Gal}}
 \newcommand{\dfrak}[0]{\mathfrak{d}}
 \newcommand{\Aut}[0]{\operatorname{Aut}}
+\newcommand{\Frob}[0]{\operatorname{Frob}}
 
 \newcommand{\todo}[2]{{\color{red}#1}\footnote{#2}}
 
