--- a/main.tex
+++ b/main.tex
@@ -29,5 +29,6 @@ Corrections of any typos or inaccuracies are always welcome, also using the pull
 \input{lecture10}
 \input{lecture11}
 \input{lecture12}
+\input{lecture13}
 
 \end{document}
