Some TODOs in Lecture 7

--- a/lecture05.tex
+++ b/lecture05.tex
@@ -46,7 +46,7 @@ Let $\mfrak$ be a maximal ideal of $A$, and write $k$ for the quotient $A/\mfrak
 Write $\bar f$ for the image of $f$ in $k[X]$.
 
 \begin{theorem}
-  There is a bijection betweent the prime (hence maximal) ideals $\Mfrak$ of $B$ lying above $\mfrak$ and the irreducible factors of $\bar f$.
+  There is a bijection between the prime (hence maximal) ideals $\Mfrak$ of $B$ lying above $\mfrak$ and the irreducible factors of $\bar f$.
 \end{theorem}
 \begin{proof}
   Exercise.
