fixed typos and did one TODO in Lecture 11

--- a/lecture11.tex
+++ b/lecture11.tex
@@ -10,7 +10,7 @@ Taking products yields a map
 \[ N : K_{\Cbb}^{\times} \to \Cbb^{\times} \]
 which is the usual norm $N_{K|\Qbb}$ when composed with $j$ above.
 
-Since we would still like to obtain a lattice at the end of the day, we need to convert from a multiplicative back to an additive version, and we ddo this by taking logs.
+Since we would still like to obtain a lattice at the end of the day, we need to convert from a multiplicative back to an additive version, and we do this by taking logs.
 Namely, consider the map $\ell : z \mapsto \log|z|$.
 This induces a surjective map
 \[ \ell : K_{\Cbb}^{\times} \to \prod_{\tau} \Rbb. \]
@@ -34,7 +34,7 @@ Next, consider the following:
   \item $S_{K} := \ker(z \mapsto |N(z)| : K_{\Rbb}^{\times} \to \Rbb^{\times})$.
   \item $H_{K} := \ker(z \mapsto \Trace(z) : (\prod_{\tau} \Rbb)^{\Gal} \to \Rbb)$.
 \end{enumerate}
-Note that $\ell$ restricts to a map $S_{K} \to H_{K}$ and that $j$ \todo{restricts to a map}{Why?} $j : \Ocal_{K}^{\times} \to S_{K}$.
+Note that $\ell$ restricts to a map $S_{K} \to H_{K}$ and that $j$ restricts to a map $j : \Ocal_{K}^{\times} \to S_{K}$ since $\ell(N(z_{\tau})_{\tau}) = \Trace(\ell(z_{\tau})_{\tau})$.
 Write $\Lambda_{K}$ for the image of $\Ocal_{K}^{\times}$ in $H$ and $\lambda : \Ocal_{K}^{\times} \to H_{K}$ the corresponding map (with image $\Lambda_{K}$).
 
 \begin{proposition}
