fixed some typos

--- a/lecture13.tex
+++ b/lecture13.tex
@@ -18,7 +18,7 @@ The decomposition groups are conjugate in $G$, as follows:
 
 Recall that in the Galois case which we are in, the inertia and ramification degrees do not depend on the choice of prime $\Pfrak$ above $\pfrak$.
 If $\Pfrak$ is a fixed prime above $\pfrak$, we have
-\[ \pfrak = (\prod_{\sigma \in G/Z_{\Pfrak|\pfrak}} \sigma\Pfrak)^{e} \]
+\[ \pfrak B= \left(\prod_{\sigma \in G/Z_{\Pfrak|\pfrak}} \sigma\Pfrak\right)^{e} \]
 where $e = e(\Pfrak|\pfrak)$.
 
 \begin{proposition}
