--- a/main.tex
+++ b/main.tex
@@ -30,5 +30,6 @@ Corrections of any typos or inaccuracies are always welcome, also using the pull
 \input{lecture11}
 \input{lecture12}
 \input{lecture13}
+\input{lecture14}
 
 \end{document}
