Start on lecture 15

--- a/lecture14.tex
+++ b/lecture14.tex
@@ -1,90 +1,6 @@
 \section{Lecture 14}
 
-So far, the main family of examples we have discussed were quadratic extensions of $\Qbb$.
-There is another arguably more important family: the \emph{cyclotomic extensions}.
-
-The \emph{$n$-th} cyclotomic field is defined as $\Qbb(\mu_{n})$.
-This is the same as $\Qbb(\xi)$, where $\xi$ is a generator of the cyclic group $\mu_{n} \subset \Cbb^{\times}$.
-We say that $\xi$ is a \emph{primitive $n$-th root of unity} for such a $\xi$.
-
-Our first task is to understand $\Ocal_{K}$ where $K = \Qbb(\mu_{n})$.
-\begin{theorem}
-  The degree of $K = \Qbb(\mu_{n})$ over $\Qbb$ is $\phi(n)$.
-  Furthermore, one has
-  \[ \Ocal_{K} = \Zbb[\mu_{n}] = \Zbb[\xi]. \]
-  In particular, $1,\xi,\xi^{2},\ldots,\xi^{d-1}$ is a $\Zbb$-basis for $\Ocal_{K}$ where $d = \phi(n)$.
-\end{theorem}
-\begin{proof}
-  Let's first assume that $n$ is a prime power $\ell^{k}$.
-  For this, we need a lemma.
-  \begin{lemma}
-    Assume that $n = \ell^{k}$.
-    Put $\lambda := 1 - \xi$.
-    Then $(\lambda)$ is a prime ideal of degree $1$ in $\Ocal_{K}$.
-    We also have $\ell \cdot \Ocal_{K} = (\lambda)^{d}$ where $d = \phi(\ell^{k}) = [K:\Qbb]$.
-    The discriminant of the power basis of $\xi$ is $\pm \ell^{s}$ where $s = \ell^{k-1} \cdot (k \cdot \ell - k - 1)$.
-  \end{lemma}
-  \begin{proof}
-    The minimal polynomial of $\xi$ is $(X^{\ell^{k}} - 1)/(X^{\ell^{k-1}}-1)$ which has the form
-    \[ X^{\ell^{k-1}(\ell-1)} + \cdots + X^{\ell^{k-1}} + 1. \]
-    Substitute $X = 1$ to obtain
-    \[ \ell = \prod_{g \in (\Zbb/n)^{\times}} (1 - \xi^{g}). \]
-    But $1 - \xi^{g} = \epsilon_{g} (1 - \xi)$ where $\epsilon_{g} = (1 - \xi^{g})/(1 - \xi) = 1 + \xi + \cdots + \xi^{g-1}$.
-    If $g'$ is the modular inverse of $g$ modulo $n$, then
-    \[ (1 - \xi)/(1-\xi^{g}) = 1 + \xi^{g} + \cdots + (\xi^{g})^{g'-1}. \]
-    is also integral, so that $\epsilon_{g}$ is a unit.
-    It follows that $\ell = \epsilon(1-\xi)^{\phi(\ell^{k})}$ where
-    \[ \epsilon = \prod_{g} \epsilon_{g}, \]
-    thus $\ell \cdot \Ocal_{K} = (\lambda)^{\phi(\ell^{k})}$.
-    Since $K$ has degree $\phi(\ell^{k})$ over $\Qbb$, it follows that $(\lambda)$ has degree $1$.
-
-    Letting $\xi = \xi_{1},\ldots,\xi_{d}$ be the conjugates of $\xi$, the minimal polynomial of $\xi$ is the $n$-th cyclotomic polynomial $\Phi_{n} = \prod_{i}(X-\xi_{i})$ and thus
-    \[ \pm d(1,\xi,\ldots,\xi^{d-1}) = N_{K|\Qbb}(\Phi_{n}'(\xi)). \]
-
-    Taking the derivative of the equation
-    \[ (X^{\ell^{k-1}}-1) \cdot \Phi_{n}(X) = X^{\ell^{k}}-1 \]
-    and substitute $\xi$ to obtain
-    \[ (\xi^{\ell^{k-1}}-1) \Phi_{n}'(\xi) = \ell^{k} \xi^{-1}. \]
-    But $\xi^{\ell^{k-1}}$ is a primitive $\ell$-th root of unity whose norm is $\pm \ell$ in the extension $\Qbb(\xi^{\ell^{k-1}})|\Qbb$.
-
-    Thus the norm of $\xi^{\ell^{k-1}}-1$ in $K|\Qbb$ is $\pm \ell^{\ell^{k-1}}$.
-    On the other hand, $\xi$ has norm $\pm 1$, so that
-    \[ d(1,\xi,\ldots,\xi^{d-1}) = \pm N_{K|\Qbb}(\Phi_{n}'(\xi)) = \pm \ell^{k\ell^{k-1}(\ell-1)-\ell^{k-1}}. \]
-  \end{proof}
-
-  Going back to the theorem, put $s$ the exponent appearing in the lemma so that
-  \[ \ell^{s} \Ocal_{K} \subset \Zbb[\xi] \subset \Ocal_{K}. \]
-  The conductor of $\xi$ thus divides $\ell^{s}$.
-  We also see that $\Ocal_{K}/\lambda\Ocal_{K} = \Fbb_{\ell}$, so that $\Ocal_{K} = \Zbb + \lambda \cdot \Ocal_{K}$ hence $(\lambda) + \Zbb[\xi] = \Ocal_{K}$.
-  Multiplying by $\lambda$ and using that $\lambda \Ocal_{K} = \lambda^{2} \Ocal_{K} + \lambda \Zbb[\xi]$, we have
-  \[ (\lambda)^{2} + \Zbb[\xi] = \Ocal_{K}. \]
-  By induction, the $2$ can be replaced by any positive integer as well.
-
-  Now, taking the exponent to be $s \cdot \phi(\ell^{k})$, and recalling that $\ell \Ocal_{K} = \lambda^{\phi(\ell^{k})} \Ocal_{K}$, we have
-  \[ \Ocal_{K} = \ell^{s} \Ocal_{K} + \Zbb[\xi] = \Zbb[\xi]. \]
-
-  For the general case, factor $n$ as $\ell_{1}^{k_{1}} \cdots \ell_{r}^{k_{r}}$.
-  Put $\xi_{i} = \xi^{n/\ell_{i}^{k_{i}}}$, a primitive root of unity of order $\ell_{i}^{k_{i}}$.
-  Note that
-  \[ K = \Qbb(\xi_{1}) \cdots \Qbb(\xi_{r}). \]
-  Also,
-  \[ \Qbb = \Qbb(\xi_{1}) \cdots \Qbb(\xi_{q}) \cap \Qbb(\xi_{q+1}). \]
-  We will now need to use the following fact.
-  \begin{lemma}
-    \todo{Consider the $(K,A,L,B)$ context with a further $(L',B')$.}{Explain.}
-    Suppose that $L|K$ and $L'|K$ are two Galois extensions of degree $n$ and $n'$ such that $L \cap L' = K$.
-    Let $e_{i}$ and $e'_{j}$ be integral bases of $L|K$ and $L'|K$, with discriminants $d$ and $d'$.
-    Assume that $d$ and $d'$ are relatively prime.
-    Then $e_{i}e_{j}'$ is an integral basis of $LL'$ with discriminant $d^{n'}d'^{n}$.
-  \end{lemma}
-  \begin{proof}
-    This is proposition 2.11 of Neukirch.
-  \end{proof}
-
-  The discriminants of the power basis associated to the $\xi_{i}$ are all coprime, so the lemma above shows that $\xi_{1}^{j_{1}} \cdots \xi_{r}^{j_{r}}$ with $j_{i} \in \{0,1,\ldots,\phi(\ell_{i}^{k_{i}})-1\}$ forms an integral basis of $\Qbb(\xi)|\Qbb$.
-  These are all powers of $\xi$, so every element of $\Ocal_{K}$ is a polynomial in $\xi$ with coefficients in $\Zbb$.
-  The inductive argument and multiplicativity of $\phi$ also gives the condition on the degree of $K|\Qbb$.
-\end{proof}
+In this lecture we (almost) finished the discussion presented in the previous lecture's notes.
 
 %%% Local Variables:
 %%% mode: latex
