--- a/main.tex
+++ b/main.tex
@@ -31,5 +31,6 @@ Corrections of any typos or inaccuracies are always welcome, also using the pull
 \input{lecture12}
 \input{lecture13}
 \input{lecture14}
+\input{lecture15}
 
 \end{document}
