--- a/lecture15.tex
+++ b/lecture15.tex
@@ -71,7 +71,7 @@ Our first task is to understand $\Ocal_{K}$ where $K = \Qbb(\mu_{n})$.
     \[ (X^{\ell^{k-1}}-1) \cdot \Phi_{n}(X) = X^{\ell^{k}}-1 \]
     and substitute $\xi$ to obtain
     \[ (\xi^{\ell^{k-1}}-1) \Phi_{n}'(\xi) = \ell^{k} \xi^{-1}. \]
-    But $\xi^{\ell^{k-1}}$ is a primitive $\ell$-th root of unity whose norm is $\pm \ell$ in the extension $\Qbb(\xi^{\ell^{k-1}})|\Qbb$.
+    But $\xi^{\ell^{k-1}}$ is a primitive $\ell$-th root of unity and the norm of $\xi^{\ell^{k-1}}-1$ in $\Qbb$ w.r.t.~$\Qbb(\mu_{\ell})$ is $\pm \ell$ (why?).
 
     Thus the norm of $\xi^{\ell^{k-1}}-1$ in $K|\Qbb$ is $\pm \ell^{\ell^{k-1}}$.
     On the other hand, $\xi$ has norm $\pm 1$, so that
