--- a/main.tex
+++ b/main.tex
@@ -32,5 +32,6 @@ Corrections of any typos or inaccuracies are always welcome, also using the pull
 \input{lecture13}
 \input{lecture14}
 \input{lecture15}
+\input{lecture16}
 
 \end{document}
