--- a/preamble.tex
+++ b/preamble.tex
@@ -43,6 +43,7 @@
 \theoremstyle{remark}
 \newtheorem{remark}[theorem]{Remark}
 \newtheorem{example}[theorem]{Example}
+\newtheorem{exercise}[theorem]{Exercise}
 \theoremstyle{definition}
 \newtheorem{definition}[theorem]{Definition}
 
