--- a/main.tex
+++ b/main.tex
@@ -33,5 +33,6 @@ Corrections of any typos or inaccuracies are always welcome, also using the pull
 \input{lecture14}
 \input{lecture15}
 \input{lecture16}
+\input{lecture17}
 
 \end{document}
