--- a/lecture17.tex
+++ b/lecture17.tex
@@ -89,7 +89,7 @@ We will write $M_{K}$ for the collection of absolute values of $K$ of the form $
 If $L|K$ is a finite extension and $v \in M_{K}$ then any absolute value of $L$ extending $v$ lies in $M_{L}$ (this was the reason for our normalization of $|-|_{\pfrak}$ above).
 Note that for nonarchmedean primes $v$ of $M_{K}$, we have $v|p$ for some rational prime $p \in M_{\Qbb}$.
 Also,
-\[ M_{\Qbb} = \Spec \Z \cup \{\infty\} \]
+\[ M_{\Qbb} = MaxSpec \Zbb \cup \{\infty\} \]
 and the archemedean primes $v$ of $K$ satisfy $v|\infty$.
 
 One may check that any two elements of $M_{K}$ are \emph{independent} as absolute values, meaning that they induce distinct topologies on $K$.
