start on notes for lecture 18

--- a/main.tex
+++ b/main.tex
@@ -34,5 +34,6 @@ Corrections of any typos or inaccuracies are always welcome, also using the pull
 \input{lecture15}
 \input{lecture16}
 \input{lecture17}
+\input{lecture18}
 
 \end{document}
