--- a/main.tex
+++ b/main.tex
@@ -35,5 +35,6 @@ Corrections of any typos or inaccuracies are always welcome, also using the pull
 \input{lecture16}
 \input{lecture17}
 \input{lecture18}
+\input{lecture19}
 
 \end{document}
