--- a/lecture19.tex
+++ b/lecture19.tex
@@ -151,6 +151,10 @@ To finish off today, let's discuss some applications.
   \[ |x| = \sqrt[n]{|N_{L|K}(x)|}. \]
   Also, $L$ is again complete with respect to this absolute value.
 \end{theorem}
+\begin{proof}
+  Completeness is a general fact about finite dimensional vector spaces over complete fields, and we omit it (see Proposition 4.9 in Neukirch Ch II).
+  Existence and uniqueness will be proved in lecture (again, see Neukirch).
+\end{proof}
 \begin{remark}
   Using Ostrowski's theorem discussed in the last lecture, the same holds in the Archemedean case as well.
 \end{remark}
