--- a/main.tex
+++ b/main.tex
@@ -36,5 +36,6 @@ Corrections of any typos or inaccuracies are always welcome, also using the pull
 \input{lecture17}
 \input{lecture18}
 \input{lecture19}
+\input{lecture20}
 
 \end{document}
