--- a/main.tex
+++ b/main.tex
@@ -37,5 +37,6 @@ Corrections of any typos or inaccuracies are always welcome, also using the pull
 \input{lecture18}
 \input{lecture19}
 \input{lecture20}
+\input{lecture21}
 
 \end{document}
