--- a/main.tex
+++ b/main.tex
@@ -38,5 +38,6 @@ Corrections of any typos or inaccuracies are always welcome, also using the pull
 \input{lecture19}
 \input{lecture20}
 \input{lecture21}
+\input{lecture22}
 
 \end{document}
