--- a/preamble.tex
+++ b/preamble.tex
@@ -31,6 +31,10 @@
 \newcommand{\dfrak}[0]{\mathfrak{d}}
 \newcommand{\Aut}[0]{\operatorname{Aut}}
 \newcommand{\Frob}[0]{\operatorname{Frob}}
+\newcommand{\ab}[0]{\mathrm{ab}}
+\newcommand{\rec}[0]{\operatorname{rec}}
+\newcommand{\Br}[0]{\operatorname{Br}}
+\newcommand{\HH}[0]{\operatorname{H}}
 
 \newcommand{\todo}[2]{{\color{red}#1}\footnote{#2}}
 
