--- a/lecture22.tex
+++ b/lecture22.tex
@@ -83,12 +83,12 @@ In the profinite setting, we see that the image of the units $U_{K}$ is the iner
 \todo{I will draw a diagram in class.}{Typeset this diagram here.}
 
 At this point, taking the statements for granted, we deduce that the maximal abelian extension of a $p$-adic field $K$ has the following form
-\[ K^{\ab} = K^{\ur} \cdot K_{\pi} \]
+\[ K^{\ab} = K^{ur} \cdot K_{\pi} \]
 where $K_{\pi}$ is the fixed field of $\rec(\pi)$ for some chosen uniformizer $\pi$.
-We understand exactly how to describe $K^{\ur}$, the maximal unramified extension of $K$.
+We understand exactly how to describe $K^{ur}$, the maximal unramified extension of $K$.
 All such extensions arise by extending the residue field $\kappa$, which has size $q$.
 If $\Fbb_{q^{r}}$ is such an extension, then we can obtain the analogous unramified extension of $K$, for example, by applying Hensel's lemma to the polynomial $X^{q^{r}-1}-1$.
-In any case, we see that $K^{\ur}$ can be obtained by adjoining roots of unity of order $q^{r}-1$ as $r$ varies.
+In any case, we see that $K^{ur}$ can be obtained by adjoining roots of unity of order $q^{r}-1$ as $r$ varies.
 
 But what about the \emph{ramified} part $K_{\pi}$?
 By general ramification theory together with LCFT, note that $K_{\pi}|K$ must be \emph{totally} ramified, meaning that the residue field of $K_{\pi}$ is the same as that of $K$.
