sketch of Lubin-Tate theory

--- a/main.tex
+++ b/main.tex
@@ -39,5 +39,6 @@ Corrections of any typos or inaccuracies are always welcome, also using the pull
 \input{lecture20}
 \input{lecture21}
 \input{lecture22}
+\input{lecture23}
 
 \end{document}
