--- a/preamble.tex
+++ b/preamble.tex
@@ -35,6 +35,7 @@
 \newcommand{\rec}[0]{\operatorname{rec}}
 \newcommand{\Br}[0]{\operatorname{Br}}
 \newcommand{\HH}[0]{\operatorname{H}}
+\newcommand{\Fcal}[0]{\mathcal{F}}
 
 \newcommand{\todo}[2]{{\color{red}#1}\footnote{#2}}
 
