start on extra lecture 1

--- a/main.tex
+++ b/main.tex
@@ -40,5 +40,6 @@ Corrections of any typos or inaccuracies are always welcome, also using the pull
 \input{lecture21}
 \input{lecture22}
 \input{lecture23}
+\input{extra_lecture01}
 
 \end{document}
