--- a/preamble.tex
+++ b/preamble.tex
@@ -36,6 +36,8 @@
 \newcommand{\Br}[0]{\operatorname{Br}}
 \newcommand{\HH}[0]{\operatorname{H}}
 \newcommand{\Fcal}[0]{\mathcal{F}}
+\newcommand{\Isom}[0]{\operatorname{Isom}}
+\newcommand{\Inn}[0]{\operatorname{Inn}}
 
 \newcommand{\todo}[2]{{\color{red}#1}\footnote{#2}}
 
