--- a/preamble.tex
+++ b/preamble.tex
@@ -38,6 +38,9 @@
 \newcommand{\Fcal}[0]{\mathcal{F}}
 \newcommand{\Isom}[0]{\operatorname{Isom}}
 \newcommand{\Inn}[0]{\operatorname{Inn}}
+\newcommand{\Abb}[0]{\mathbb{A}}
+\newcommand{\Ibb}[0]{\mathbb{I}}
+\newcommand{\Cfrak}[0]{\mathfrak{C}}
 
 \newcommand{\todo}[2]{{\color{red}#1}\footnote{#2}}
 
