--- a/main.tex
+++ b/main.tex
@@ -40,6 +40,7 @@ Corrections of any typos or inaccuracies are always welcome, also using the pull
 \input{lecture21}
 \input{lecture22}
 \input{lecture23}
+\input{lecture24}
 \input{extra_lecture01}
 
 \end{document}
